Set --illegal-access=warn