@@ -521,7 +521,7 @@ sonarcloud)
         -Dsonar.cfamily.cache.enabled=true \
         -Dsonar.host.url=https://sonarcloud.io \
         -Dsonar.cfamily.build-wrapper-output=bw-output \
-        -Dsonar.login=${SONARCLOUD_LOGIN}  || exit $?
+        -Dsonar.login=${SONARCLOUD_LOGIN} --illegal-access=warn || exit $?
 	rm -r bw-output .scannerwork
 	;;
 *)
